--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
   "devDependencies": {
     "firebase": "^7.5.2",
     "rollup": "^1.27.9",
+    "rollup-plugin-bundle-html": "^0.2.2",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-typescript": "^1.0.1",
+    "rollup-watch": "^4.3.1",
+    "serve": "^11.3.0",
+    "sirv-cli": "^0.4.4",
     "svelte": "^3.16.3",
+    "svelte-preprocess": "^3.3.0",
     "sveltefire": "^0.1.0",
-    "sirv-cli": "^0.4.4"
+    "tslib": "^1.10.0",
+    "typescript": "^3.7.4"
   },
   "repository": {
     "type": "git",
