--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "start": "sirv public"
   },
   "devDependencies": {
+    "autoprefixer": "^9.7.4",
     "firebase": "^7.5.2",
+    "node-sass": "^4.13.0",
     "rollup": "^1.27.9",
     "rollup-plugin-bundle-html": "^0.2.2",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-scss": "^2.1.0",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
